--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,13 +5,14 @@
     android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@drawable/wallpaper">
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_marginBottom="395dp"
+        android:layout_marginBottom="355dp"
         app:layout_constraintBottom_toTopOf="@+id/txtResult"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -22,10 +23,12 @@
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="1dp"
         android:layout_marginEnd="27dp"
+        android:fontFamily="monospace"
         android:text="@string/wall1"
+        android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/height1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/height1" />
@@ -34,10 +37,12 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="1dp"
         android:layout_marginEnd="27dp"
+        android:fontFamily="monospace"
         android:text="@string/wall2"
+        android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/height2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/height2" />
@@ -46,10 +51,12 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="33dp"
         android:layout_marginEnd="27dp"
+        android:fontFamily="monospace"
         android:text="@string/wall3"
+        android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/height3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
@@ -58,10 +65,12 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="33dp"
         android:layout_marginEnd="27dp"
+        android:fontFamily="monospace"
         android:text="@string/wall4"
+        android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/height4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
@@ -72,6 +81,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="160dp"
         android:layout_marginTop="11dp"
+        android:textStyle="bold"
+        android:fontFamily="monospace"
         android:text="@string/lengthLbl"
         app:layout_constraintEnd_toEndOf="@+id/height1"
         app:layout_constraintStart_toStartOf="parent"
@@ -83,6 +94,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginTop="11dp"
+        android:textStyle="bold"
+        android:fontFamily="monospace"
         android:text="@string/qtDoors"
         app:layout_constraintStart_toEndOf="@+id/textView5"
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
@@ -92,12 +105,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="45dp"
-        android:layout_marginTop="161dp"
+        android:layout_marginTop="11dp"
         android:layout_marginEnd="12dp"
+        android:fontFamily="monospace"
         android:text="@string/qtWindows"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView6"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <Spinner
         android:id="@+id/spinnerDoors1"
@@ -184,7 +199,8 @@
         android:id="@+id/calculateBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="60dp"
+        android:backgroundTint="@color/cardview_shadow_end_color"
         android:onClick="calculateBtn"
         android:text="Calcular"
         app:layout_constraintStart_toStartOf="@+id/width4"
@@ -197,6 +213,8 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="132dp"
+        android:textStyle="bold"
+        android:fontFamily="monospace"
         android:text="@string/result"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -333,7 +351,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="80dp"
-        android:layout_marginBottom="167dp"
+        android:layout_marginBottom="147dp"
+        android:fontFamily="monospace"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView8"
@@ -345,6 +365,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="81dp"
         android:layout_marginBottom="85dp"
+        android:fontFamily="monospace"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/txtResult"
         app:layout_constraintTop_toTopOf="@+id/txtResult" />
@@ -355,6 +376,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:text="@string/totalArea"
+        android:textStyle="bold"
+        android:fontFamily="monospace"
         app:layout_constraintBottom_toBottomOf="@+id/txtArea"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/txtArea" />
